cabal-version:       2.4

name:                chess
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Kevin Mullins
maintainer:          46154511+pnotequalnp@users.noreply.github.com
copyright:           © 2020 Kevin Mullins
category:            Game

common common
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , BlockArguments
                     , EmptyCase
                     , LambdaCase
                     , NoStarIsType
                     , OverloadedStrings
                     , RankNTypes
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , ViewPatterns
  ghc-options:         -Wall
                       -fdefer-type-errors
                       -fno-show-valid-hole-fits
  build-depends:       base ^>=4.13.0.0
                     , lens

library
  import:              common
  exposed-modules:     Chess.Board
  hs-source-dirs:      src

executable chess
  import:              common
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       chess

test-suite chess-test
  import:              common
  hs-source-dirs:      test
  main-is:             Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       chess
